...
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="onCategoryClicked"
        android:text="Categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view"
        android:visibility="gone"

        />

    <Button
        android:id="@+id/plan_btn"
        android:layout_width="87dp"
        android:layout_height="52dp"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="8dp"
        android:onClick="onPlanButtonClicked"
        android:text="Plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view"

        />
...
